<resources>
    <string name="app_name">TourApp</string>
    <string name="map">地图</string>
    <string name="tour">旅游团</string>
    <string name="user">用户</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">即将开始旅途</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_pwd">请输入密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">修改密码</string>
    <string name="login">登录</string>
    <string name="invalid_username">用户名无效</string>
    <string name="invalid_password">密码必须大于6位数</string>
    <string name="mismatching_password">两次密码输入不一致</string>
    <string name="update_failed">密码修改失败</string>
    <string name="update_success">密码修改成功</string>
    <string name="mismatching">用户名与旧密码不匹配</string>
    <string name="register">没有账号?点击注册</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登陆失败</string>
    <string name="user_title">个人中心</string>
    <string name="nickname">昵称:</string>
    <string name="username">用户名:</string>
    <string name="collect">散拼成功</string>
    <string name="unCollect">取消散拼</string>
    <string name="is_nickname_valid">昵称为空或包含空格</string>
    <string name="set_invalid">设置失败</string>
    <string name="tour_record">行程记录</string>
    <string name="Mylove">我的点赞</string>
    <string name="MyBrowse">我的浏览</string>
</resources>