<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="52dp"
            android:background="@drawable/shape_edit_normal"
            android:src="@drawable/user_item"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="52dp"
            android:id="@+id/et_username"
            android:hint="@string/login_username"
            android:inputType="text"
            android:background="@drawable/editext_selector"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="52dp"
            android:background="@drawable/shape_edit_normal"
            android:src="@drawable/password"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="52dp"
            android:id="@+id/et_password"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:background="@drawable/editext_selector"/>

    </LinearLayout>
    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_pwd"
        android:checked="false"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btn_updatePwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:textSize="15sp"
            android:background="@drawable/button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/login"
            android:background="@drawable/button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/register"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>